Overflow fixes

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ button:disabled {
   padding: 16px;
   border-radius: 8px; 
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
