--- a/src/assets/styles/MainPageListContainers.css
+++ b/src/assets/styles/MainPageListContainers.css
@@ -6,11 +6,11 @@
 
 .grid-top {
   display: grid;
+  width: 100%;
 
   background-color: rgba(255, 255, 255, 0.1);
-  grid-template-columns: 1fr 120px;
+  grid-template-columns: 1fr 100px 120px;
   align-items: center;
-  padding-left: 20px;
   box-shadow: 2px 0px 5px 5px rgba(0, 0, 0, 0.9);
 }
 
@@ -18,6 +18,7 @@
   font-size: 20px;
   font-weight: bold;
   user-select: none;
+  margin-left: 20px;
   -webkit-user-select: none;
 }
 
